objects/LBI__CampaignRollupClause__c.object
<CustomObject>
    <fields>
        <fullName>LBI__CampaignRollup__c</fullName>
        <label>Lattice Campaign Rollup</label>
        <referenceTo>LBI__CampaignRollup__c</referenceTo>
        <relationshipLabel>Campaign Rollup Clauses</relationshipLabel>
        <relationshipName>CampaignRollupClauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lattice Campaign Rollup Clause</label>
    <nameField>
        <displayFormat>CRC-{0000000000}</displayFormat>
        <label>Campaign Rollup Clause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Campaign Rollup Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>